src/recipe/parser/snapshots/rattler_build__recipe__parser__package__tests__invalid_fields.snap
---
source: src/recipe/parser/package.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
   ╭─[6:9]
 5 │             invalid: "field"
 6 │         
   ╰────
  help: Parser error: invalid value
