src/recipe/parser/snapshots/rattler_build__recipe__parser__package__tests__missing_fields.snap
---
source: src/recipe/parser/package.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
   ╭─[4:9]
 3 │             name: test
 4 │         
   ╰────
  help: Parser error: missing field
